--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   </div>
                   <h2 class="project-heading">Modern Chair</h2>
                   <p class="project-sub-heading">
-                    A platform to download copyrights free youtube music
+                    A platform to buy modern chair.
                   </p>
                   <div class="btn-group">
                     <button class="btn-pink btn-project">Read More</button>
@@ -138,21 +138,21 @@
                     <img class="project-skill" src="./images/stack/HTML.png" alt="" />
                     <img class="project-skill" src="./images/stack/CSS.png" alt="" />
                     <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-                    <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
+                    <!-- <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" /> -->
                     <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
                     <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                   </div>
         
-                  <h2 class="project-heading">Isha Tattva</h2>
+                  <h2 class="project-heading">MY Gallery</h2>
                   <p class="project-sub-heading">
-                    A Website for interior designer to showcase her works and samples
+                    The goal is to showcase a collection of images <br>in an organized and visually appealing manner. 
                   </p>
                   <div class="btn-group">
                     <button class="btn-pink btn-project">Read More</button>
-                    <a href="">
+                    <a href="https://github.com/Rupesh260901/MY-GALLERY-PROJECT">
                       <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                     </a>
-                    <a href="">
+                    <a href="https://my-gallery-project-alpha.vercel.app">
                       <i title="Live Link" class="fa-solid fa-link icon"></i>
                     </a>
                   </div>
