changed login page

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <h3 class="contactus-sub-heading">Questions,thoughts,or just want to say hello?</h3>
 
           <div class="contactus-form-container">
-            <form class="form" action="">
+            <form class="form" action="mailto:rupeshraj260999@gmail.com" method="post" enctype="text/plain">
               <div class="formfield-container">
                 <input class="formfield"
                  type="text" 
